entries added as bytes